# privatevault-runtime-governance

./: .gitignore  DEMO_FLOW.md  Dockerfile  README.md  alembic.ini  grok_demo.py  grok_demo_multi.py  grok_policy_demo.py  policy_demo.py
privatevault-runtime-governance/: pyproject.toml
privatevault-runtime-governance/.github/workflows/: ci.yml
privatevault-runtime-governance/migrations/: env.py
privatevault-runtime-governance/migrations/versions/: b71324001085_create_ledger_events.py
privatevault-runtime-governance/runtime_governance/adapters/llm/: base.py  grok_adapter.py
privatevault-runtime-governance/runtime_governance/core/: enforcement_engine.py
privatevault-runtime-governance/runtime_governance/ledger/: models.py  signature.py
runtime_governance/api/: rest.py  runtime.proto
runtime_governance/idempotency/: service.py
runtime_governance/ledger/: merkle.py  repository.py
runtime_governance/utils/: hash.py
